tests/snapshot/error/stack_trace/promise_then_module.js
await (Promise.resolve()).then(() => {
  throw new Error('test');
})